--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dialogflow-fulfillment": "^0.5.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "ngrok": "^5.0.0-beta.2",
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.5"
   }
